@@ -29,6 +29,7 @@
   * Add ~lsp-bash-allowed-shells~ to configure supported ~sh-shell~ values.
   * Add hint about ~activation-fn~ for unsupported buffers.
   * Add Roc support
+  * Add support for environment variables in rust analyzer runnables. Allowing the new ~Update Tests (Expect)~ code lens to work as expected.
 
 ** 9.0.0
   * Add language server config for QML (Qt Modeling Language) using qmlls.
